Corrected thumbnail overflow
Images push out of container when they are not square.

--- a/css/content.sass
+++ b/css/content.sass
@@ -21,6 +21,7 @@
     -webkit-border-radius: 5px
     display: inline-block
     vertical-align: top
+    overflow: hidden
 
   .dropzone
     padding-top: 40px
